# physics-playground

./: package.json  physics-playground.code-workspace  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.devcontainer/: devcontainer.json
.github/: dependabot.yml
node/: .gitignore  package.json
node/src/: App.tsx
node/src/features/vectors/: vectors.component.tsx
rust/: .gitignore  Cargo.toml  rustfmt.toml  typos.toml
rust/crates/app/: Cargo.toml
rust/crates/app/src/: app.rs  lib.rs
rust/crates/fp_math/: Cargo.toml
rust/crates/fp_math/src/: lib.rs  ops.rs
rust/crates/fp_math/src/primitives/math_2d/: circle.rs
rust/crates/physics_playground_app/: Cargo.toml
rust/crates/physics_playground_app/src/: app.rs  lib.rs  prelude.rs
rust/crates/physics_playground_app/src/app/: app_exit.rs
rust/crates/physics_playground_internal/: Cargo.toml
rust/crates/physics_playground_internal/src/: lib.rs  prelude.rs
rust/crates/physics_playground_math/: Cargo.toml
rust/crates/physics_playground_math/src/: lib.rs  ops.rs  prelude.rs  primitives.rs
rust/crates/physics_playground_math/src/primitives/: math_2d.rs
rust/crates/physics_playground_math/src/primitives/math_2d/: circle.rs
rust/crates/rendering/: Cargo.toml
rust/crates/rendering/src/: lib.rs
rust/crates/triangle/: Cargo.toml
rust/crates/triangle/src/: lib.rs
rust/examples/2d/: 2d_vectors.rs  README.md
rust/src/: lib.rs
rust/tools/: build.sh  cargo.sh
src/features/: util.ts
src/features/vectors/: vectors.component.tsx
src/shaders/: grid.frag.wgsl  grid.vert.wgsl
