[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.package]
rust-version = "1.87.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Victor Pogor", "contributors"]
repository = "https://github.com/victor-pogor/physics-playground.git"

[workspace.dependencies]
# Local crates
app = { path = "crates/app", version = "0.1.0" }
triangle = { path = "crates/triangle", version = "0.1.0" }

# Third-party crates
wgpu = "25.0.2"
wgpu-types = "25.0.0"
winit = "0.29.15"
env_logger = "0.11.8"
pollster = "0.4.0"
