[package]
name = "physics-playground"
version = "0.0.0-dev"
edition = "2024"
categories = ["game-engines", "graphics", "gui", "rendering"]
description = "A physics engine inspired by Bevy's ECS architecture, designed for educational purposes and experimentation with physics simulations."
homepage = "https://github.com/victor-pogor/physics-playground"
keywords = ["game", "physics", "engine", "gamedev", "graphics", "bevy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/victor-pogor/physics-playground"
rust-version = "1.88.0"

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
rust-version = "1.87.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Victor Pogor", "contributors"]
repository = "https://github.com/victor-pogor/physics-playground.git"

[workspace.dependencies]
# Local crates
fp_math = { path = "crates/math" }

# Third-party crates
approx = { version = "0.5", default-features = false }
env_logger = "0.11.8"
glam = { version = "0.30.4", default-features = false}
pollster = "0.4.0"
wgpu = "26.0.0"
wgpu-types = "26.0.0"
winit = "0.30.11"

[[example]]
name = "2d_vectors"
path = "examples/2d/2d_vectors.rs"
doc-scrape-examples = true