[package]
name = "physics-playground-math"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Local crates

# Third-party crates
approx = { workspace = true, optional = true }
glam = { workspace = true, features = ["bytemuck"] }

[dev-dependencies]
physics-playground-math = { path = ".", default-features = false, features = ["approx"] }
glam = { workspace = true, default-features = false, features = ["approx"] }

[features]
default = ["std"]
std = [
  "glam/std",
]

# Enable approx for glam types to approximate floating point equality comparisons and assertions
approx = ["dep:approx", "glam/approx"]