[package]
name = "triangle"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# Local crates

# Non-local crates
wgpu.workspace = true
wgpu-types = { workspace = true, features = [
    "std",
    "trace", # TODO(#5974): this should be a dep on wgpu/trace and not wgpu-types at all
] }
winit.workspace = true
env_logger.workspace = true
pollster.workspace = true
